# dynamic-ma

./: README.md  main.py  pyproject.toml  testing.ipynb
